$Id$
Version 2.0+CVS (?? ??? 2007)
 - Implemented DEFAULT_XXX_USER options for rss, minical,upcoming and publish
 - Implemented RFE [ 574173 ] Allow password expiration
 - Implemented RFE [ 1393620 ] Plain Password Option
 - Implemented RFE [ 1827093 ] Use Checkboxes in Preferences
 - All admin/pref setting use ENABLE vs a mix of DISABLE/ENABLE
 - UAC is always enabled
 - Implemented [ 1775923 ] Edit/Delete options in calendars (context menu via AJAX. Currently, only month.php uses thi)s
 - Implemented AJAX to set all dymanic javascript variables and translations
 - Implemented true CSS cache
 - Implmented setPref() function to eliminate many global variables
 - Changed admin.php (master) variables to begin with '_'. If set to 'N', these options will be
   disabled in pref.php. See default_config.php file for details
 - Changed admin/preg pages to use checkboxes vs radio 
 - Converted to Smarty Template system
Version 1.1.3+CcontrolsVS (?? ??? 2006)
 - Fixed bug [ 1657494 ] Unable to repeat events by slecting months
 - Fixed bug [ 1654078 ] cannot managed 'public access' without using 'top-menue'
 - Fixed bug [ 1657946 ] little thick squares at layered events at month.php
 - Fixed bug [ 1657794 ] missing seperate line between sort-header and tasks
 - Fixed bug [ 1657789 ] 'due-dates' are not displayed at the 'little-task-list'
 - Fixed bug [ 1606260 ] no sunday not in view: WEEK (users vertical)
 - Fixed bug [ 1652424 ] no/little clues on actual user when viewing other's cal
 - Fixed bug [ 1650891 ] Including apostrophe (') in report name breaks top menu.
 - Fixed bug [ 1650140 ] Cannot export other user's calendars
 - Fixed bug [ 1603601 ] priority in 'small-task-list' will not be sorted correctly
 - Fixed bug [ 1636405 ] Public Acces not avail in e.g. layers ...
 - Fixed bug [ 1636045 ] Public Access: only part of events visible, and only owner..
 - Fixed bug [ 1636635 ] detailed view of a layered event at public access is not